fetch data from db

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,11 @@ SERVICE_TIME_METHOD=smart
 # Fixed service time in minutes (only used if method is "fixed")
 FIXED_SERVICE_TIME=3
 
+# Timezone Configuration (OPTIONAL)
+# IANA timezone name used as the default for the delivery date picker.
+# Examples: America/New_York, America/Chicago, America/Denver, America/Los_Angeles, UTC
+DEFAULT_TIMEZONE=America/New_York
+
 # Test Mode Configuration (OPTIONAL)
 # Enable to bypass Google Maps API calls during development/testing
 # Uses mock geocoding and estimated distances to save API costs
@@ -28,3 +33,27 @@ TEST_MODE=true
 # App Password (REQUIRED)
 # Password to access the application
 APP_PASSWORD=spaceCowboy
+
+# ============================================================
+# PostgreSQL Database Configuration (OPTIONAL)
+# Required only if you want to use "Fetch from Database" mode
+# ============================================================
+
+# Database connection URLs (postgresql://user:password@host:5432/dbname)
+DB_1_URL=postgresql://user:password@host:5432/database1
+DB_2_URL=postgresql://user:password@host:5432/database2
+
+# Store configuration as a JSON array.
+# Each entry maps a store to a database and defines how to query it.
+#
+# Fields:
+#   id          - Unique store identifier (used internally)
+#   name        - Display name shown in the multi-select dropdown
+#   db          - Which database to connect to (1 or 2)
+#   runs_table  - Table that holds run/timeslot records (has timeslotId + deliveryDate)
+#   orders_table - Table that holds order records (has timeslotId + order columns)
+#   filter      - Column/value pairs to filter the runs table (e.g. by fulfillmentLocation)
+#
+# Example (single-line, paste into .env):
+# STORES_CONFIG=[{"id":"store_208","name":"Lincoln Park - 208","db":1,"runs_table":"runs","orders_table":"orders","filter":{"fulfillmentLocation":"208"}},{"id":"store_243","name":"Clinton Twp - 243","db":2,"runs_table":"runs","orders_table":"orders","filter":{"fulfillmentLocation":"243"}}]
+STORES_CONFIG=[{"id":872,"name":"Lincoln Park - 208"},{"id":1004,"name":"Clinton Twp - 243"}]
