--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,7 @@ TEST_MODE=true
 # App Password (REQUIRED)
 # Password to access the application
 APP_PASSWORD=spaceCowboy
+
+# PostgreSQL Database (REQUIRED for store selector)
+# Format: postgresql://user:password@host:port/dbname
+DATABASE_URL=postgresql://user:password@localhost:5432/dbname
